--- a/index.html
+++ b/index.html
@@ -36,112 +36,15 @@
           <div class="view-selector__item">Monthly</div>
         </div>
       </div>
-      <div class="dashboard__card dashboard__card--work">
-        <article class="tracking__card">
-          <header class="tracking__card__header">
-            <h4 class="tracking__card__title">Work</h4>
-            <img class="tracking__card__menu" src="images/icon-ellipsis.svg" alt="">
-          </header>
-          <div class="tracking__card__body">
-            <div class="tracking__card__time">
-              32hrs
-            </div>
-            <div class="tracking__card__previous">
-              Last week - 36hrs
-            </div>
-          </div>
-        </article>
-      </div>
-      <div class="dashboard__card dashboard__card--play">
-        <article class="tracking__card">
-          <header class="tracking__card__header">
-            <h4 class="tracking__card__title">Play</h4>
-            <img class="tracking__card__menu" src="images/icon-ellipsis.svg" alt="">
-          </header>
-          <div class="tracking__card__body">
-            <div class="tracking__card__time">
-              10hrs
-            </div>
-            <div class="tracking__card__previous">
-              Last week - 8hrs
-            </div>
-          </div>
-        </article>
-      </div>
-      <div class="dashboard__card dashboard__card--study">
-        <article class="tracking__card">
-          <header class="tracking__card__header">
-            <h4 class="tracking__card__title">Study</h4>
-            <img class="tracking__card__menu" src="images/icon-ellipsis.svg" alt="">
-          </header>
-          <div class="tracking__card__body">
-            <div class="tracking__card__time">
-              4hrs
-            </div>
-            <div class="tracking__card__previous">
-              Last week - 7hrs
-            </div>
-          </div>
-        </article>
-      </div>
-      <div class="dashboard__card dashboard__card--exercise">
-        <article class="tracking__card">
-          <header class="tracking__card__header">
-            <h4 class="tracking__card__title">Exercise</h4>
-            <img class="tracking__card__menu" src="images/icon-ellipsis.svg" alt="">
-          </header>
-          <div class="tracking__card__body">
-            <div class="tracking__card__time">
-              4hrs
-            </div>
-            <div class="tracking__card__previous">
-              Last week - 5hrs
-            </div>
-          </div>
-        </article>
-      </div>
-      <div class="dashboard__card dashboard__card--social">
-        <article class="tracking__card">
-          <header class="tracking__card__header">
-            <h4 class="tracking__card__title">Social</h4>
-            <img class="tracking__card__menu" src="images/icon-ellipsis.svg" alt="">
-          </header>
-          <div class="tracking__card__body">
-            <div class="tracking__card__time">
-              5hrs
-            </div>
-            <div class="tracking__card__previous">
-              Last week - 10hrs
-            </div>
-          </div>
-        </article>
-      </div>
-      <div class="dashboard__card dashboard__card--self-care">
-        <article class="tracking__card">
-          <header class="tracking__card__header">
-            <h4 class="tracking__card__title">Self Care</h4>
-            <img class="tracking__card__menu" src="images/icon-ellipsis.svg" alt="">
-          </header>
-          <div class="tracking__card__body">
-            <div class="tracking__card__time">
-              2hrs
-            </div>
-            <div class="tracking__card__previous">
-              Last week - 2hrs
-            </div>
-          </div>
-        </article>
-      </div>  
+  
     </div>
   </section>
 
-
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://mishanep.com">Max Suspect</a>.
   </div>
 
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
